--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -114,6 +114,16 @@ svg polygon:hover {
     }
 }
 
+@media (max-width: 400px) {
+    #navbar {
+        margin-left: 30px;
+    }
+
+    .nav-btn, .nav-btn-active {
+        font-size: 1rem;
+    }
+}
+
 @media (min-width: 1000px) {
     #navbar, #navbar-hidden {
         left: 6%;
