--- a/src/components/css/Work.css
+++ b/src/components/css/Work.css
@@ -35,6 +35,7 @@
     border-radius: 10%;
     width: 100%;
     max-width: 600px;
+    height: 300px;
     transform: scale(1);
     transition: transform 1s;
 }
@@ -114,5 +115,15 @@
 @media (min-width: 1000px) {
     #work-container {
         margin-left: 35%;
+    }
+
+    #slide-a img, #slide-b img {
+        height: 440px;
+    }
+}
+
+@media (max-width: 400px) {
+    #slide-a img, #slide-b img {
+        height: 200px;
     }
 }
